Build preset resolvePackageReferences is inconsistent with other preset behavior
The docs for the new resolvePackageReferences
build preset field in CMake 3.23.0-rc1 states that the preset overrides the --resolve-package-references
command line parameter. This is the opposite to how pretty much everything else about presets works. All other cases I can think of will see a command line option override anything set by a preset (cache variables, build directory, generator type, toolchain file, etc.). If this is indeed how resolvePackageReferences
works, it seems this inconsistency should not be permitted and we should reverse the priority before the 3.23.0 release. I have no projects that would use such a feature and no real familiarity with the NuGet functionality, so I will have to leave it to others to verify the behavior.
If the command line does in fact take priority, then the docs should be corrected.