cmake --build: prioritize --resolve-package-references over preset

Fixes: #23224