Help/manual/cmake-presets.7.rst
@@ -498,17 +498,16 @@ that may contain the following fields:
 
   .. note::
 
-    If this setting is not specified in a preset, CMake will instead
-    use the setting specified by the ``--resolve-package-references``
-    command line parameter. If the command line parameter is not
-    provided either, an environment-specific cache variable will be
-    evaluated to decide, if package restoration should be performed.
+    The command line parameter ``--resolve-package-references`` will take
+    priority over this setting. If the command line parameter is not provided
+    and this setting is not specified, an environment-specific cache variable
+    will be evaluated to decide, if package restoration should be performed.
 
-    When using the Visual Studio generator, package references are
-    defined using the :prop_tgt:`VS_PACKAGE_REFERENCES` property.
-    Package references are restored using NuGet. It can be disabled
-    by setting the ``CMAKE_VS_NUGET_PACKAGE_RESTORE`` variable to
-    ``OFF``. This can also be done from within a configure preset.
+    When using the Visual Studio generator, package references are defined
+    using the :prop_tgt:`VS_PACKAGE_REFERENCES` property. Package references
+    are restored using NuGet. It can be disabled by setting the
+    ``CMAKE_VS_NUGET_PACKAGE_RESTORE`` variable to ``OFF``. This can also be
+    done from within a configure preset.
 
 ``verbose``
 
